# battleship

./: .hspec  LICENSE  Procfile  battleship.cabal  bundle.css  bundle.js  bundle.js.map  index.js  stack.yaml  warships.cabal
app/: Main.hs
src/Warships/: BattleField.hs  Generator.hs  Lib.hs  Types.hs
test/: Spec.hs
web/: gulpfile.js  index.html  package.json  publish.js
web/src/: bundle.scss  index.tsx
web/src/components/: Board.tsx  Hello.tsx  JoinGameDialog.tsx  MainMenu.tsx
web/src/core/: grid.ts  server.ts
