name:                battleship
version:             0.1.0.0
synopsis:            Game
description:         A game
homepage:            https://github.com/triplepointfive/battleship#readme
license:             BSD3
license-file:        LICENSE
author:              Ilya Smelkov
maintainer:          triplepointfive@gmail.com
copyright:           2016 Ilya Smelkov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Warships.BattleField
                     , Warships.Lib
                     , Warships.Types
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
  default-language:    Haskell2010
  ghc-options:         -Wall

executable battleship-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , battleship
                     , websockets
                     , text
  default-language:    Haskell2010

test-suite battleship-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , battleship
                     , containers
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/triplepointfive/battleship
